8181571: printing to CUPS fails on mac sandbox app